WEB-5193 - Fix rendering issue with predefined locations where the drop down would appear behind page elements

--- a/fid-web/src/main/webapp/style/legacy/site_wide.css
+++ b/fid-web/src/main/webapp/style/legacy/site_wide.css
@@ -273,6 +273,7 @@ em {
 	width:450px;
 	padding:4px;
 	border: 1px solid #333;
+    z-index: 100;
 }
 
 
